--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,7 @@
 						<Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
 						<Bundle-Name>${project.artifactId}</Bundle-Name>
 						<Bundle-Version>1.0.0</Bundle-Version>
-						<Private-Package>be.nabu.libs.events</Private-Package>
-						<Export-Package>be.nabu.libs.events.api</Export-Package>
+						<Export-Package>be.nabu.libs.events.*</Export-Package>
 						<Service-Component>OSGI-INF/*.xml</Service-Component>
 					</instructions>
 				</configuration>
