--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,17 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>be.nabu.libs.events</groupId>
 	<artifactId>events-api</artifactId>
 	<packaging>jar</packaging>
-	<version>${be.nabu.libs.events-events-api-version}</version>
+	<version>1.2</version>
 	<name>events-api</name>
 	<url>http://nabu.be</url>
 	<description>API for an event-driven framework</description>
-
 	<parent>
 		<groupId>be.nabu</groupId>
 		<artifactId>core</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
-
 	<build>
 		<plugins>
 			<plugin>
@@ -27,5 +24,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
